# sysmakeshift

./: CMakeLists.txt  LICENSE.txt  README.md  cpp.hint  vcpkg.json
benchmark/: CMakeLists.txt  benchmark-thread_squad.cpp  params.hpp
ci/: azure-pipelines-linux.yml  azure-pipelines.yml  vcpkg.txt
include/patton/: buffer.hpp  memory.hpp  new.hpp  thread.hpp  thread_squad.hpp
include/patton/detail/: arithmetic.hpp  buffer.hpp  errors.hpp  lazy-init.hpp  memory.hpp  thread_squad.hpp  transaction.hpp  type_traits.hpp
include/sysmakeshift/: buffer.hpp  fenv.hpp  memory.hpp  new.hpp  stop_token.hpp  thread.hpp  thread_pool.hpp  thread_squad.hpp
include/sysmakeshift/detail/: arithmetic.hpp  buffer.hpp  cpuinfo.hpp  enum.hpp  errors.hpp  lazy-init.hpp  memory.hpp  stop_token.hpp  thread.hpp  thread_pool.hpp  thread_squad.hpp  transaction.hpp  type_traits.hpp
src/: CMakeLists.txt  cpuinfo.cpp  errors.cpp  fenv.cpp  memory.cpp  new.cpp  sysmakeshift.natvis  thread.cpp  thread_pool.cpp  thread_squad.cpp
test/: CMakeLists.txt  test-buffer.cpp  test-fenv.cpp  test-memory.cpp  test-new.cpp  test-thread.cpp  test-thread_pool.cpp  test-thread_squad.cpp
test/benchmark/: CMakeLists.txt  benchmark-thread_squad.cpp  main.cpp  params.hpp
